--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     },
     "scripts": {
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "server": "nodemon index.js",
+        "client": "npm run start --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "concurrently": "^4.1.0",
         "cookie-session": "^2.0.0-beta.3",
         "express": "^4.16.4",
         "mongoose": "^5.3.12",
+        "node-fetch": "^2.3.0",
         "nodemon": "^1.18.6",
         "passport": "^0.4.0",
         "passport-google-oauth20": "^1.0.0"
