--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-    "name": "ym",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "engines": {
-        "node": "8.11.4",
-        "npm": "5.6.0"
-    },
-    "scripts": {
-        "start": "node index.js",
-        "server": "nodemon index.js",
-        "client": "npm run start --prefix client",
-        "dev": "concurrently \"npm run server\" \"npm run client\""
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "concurrently": "^4.1.0",
-        "cookie-session": "^2.0.0-beta.3",
-        "express": "^4.16.4",
-        "mongoose": "^5.3.12",
-        "node-fetch": "^2.3.0",
-        "nodemon": "^1.18.6",
-        "passport": "^0.4.0",
-        "passport-google-oauth20": "^1.0.0"
-    }
+  "name": "ym",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "engines": {
+    "node": "8.11.4",
+    "npm": "5.6.0"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "concurrently": "^4.1.0",
+    "cookie-session": "^2.0.0-beta.3",
+    "express": "^4.16.4",
+    "mongoose": "^5.3.12",
+    "node-fetch": "^2.3.0",
+    "nodemon": "^1.18.6",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
+  }
 }
